1.4.0-vcli-alpha Sara

* All the jars when a location is add are now being pulled down to the public resources directory

* Added a simple service to shutdown the server at /services/server/shutdown.html (as 
  usual it also supports txt, json, and xml calls)
  
* Added a check to make sure that the add to repository won't corrupt the repository

* Fix to the execute servlet flow services that did not execute when a token was provided.

* Added patches to the Meandre Client and Meandre Admin Client provided by Amit. 
  Patches add:
  	- Capability to get a componet description
  	- Get the component jar info
  	- Get the server version
  	- Ping the server
  	- Return the plugin information in JSON format 
 
* Added the following entries to the returned information 'meandre_uri', 'meandre_uri_name', 
  'description' to both, components and flow calls (see the html interface for mer details).
  
* Bug fix to the upload repository service (reading from the same input stream multiple times)

* Added the proxied url to the execute services execute_url and list_running_flows

* Added a call that returns the proxied url on the component context properties

* Hooked the webui proxy to the meandre server. This is just a bypass to the 
  webUI handler. The secondary server is still being started.

* Adding test to the WebUI infrastructure previous to the WebUI proxying. The
  basic strategy is to stand a servlet handler on the service that tracks /webui/
  requests and process them. 

* Added a WS in the new created jobs section to pull the current console output of a job

* Modified the interactive execution methods to create a new persistent print writer

* Created a persistent print writer wrapper to store the execution console

* Created the web service that list the status of the jobs run in the cluster so far

* Added to query and mechanics to manage job statuses

* Written the basic queries and mechanics to have a persistent log and console
